Two Way Binding

--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,13 +1,11 @@
 <label>Server Name: {{ serverName }}</label>
-<input type="text"
-    class="form-control"
-    (input)="onUpdateServerName($event)">
+<!-- <input type="text" class="form-control" (input)="onUpdateServerName($event)"> -->
 
-    <p>{{ serverName }}</p> 
+<input type="text" class="form-control" [(ngModel)]="serverName">
 
-<button class="btn btn-primary"
-    [disabled]="!allowNewServer"
-    (click)="onCreateServer()">Add Server
+<p>{{ serverName }}</p>
+
+<button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server
 </button>
 
 <!--<p [innerText]="allowNewServer"></p>-->
