--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -4,12 +4,15 @@
 <input type="text" class="form-control" [(ngModel)]="serverName">
 
 <!-- <p>{{ serverName }}</p> -->
-
+<br>
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server
 </button>
-
+<br>
+<br>
 <!--<p [innerText]="allowNewServer"></p>-->
-<p>{{ serverCreationStatus }}</p>
+<!-- <p>{{ serverCreationStatus }}</p> -->
+
+<p *ngIf="serverCreated">Server was created, server name is {{ serverName }}</p>
 
 <app-server></app-server>
 <app-server></app-server>
