--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,18 +1,14 @@
 <label>Server Name: {{ serverName }}</label>
-<!-- <input type="text" class="form-control" (input)="onUpdateServerName($event)"> -->
 
 <input type="text" class="form-control" [(ngModel)]="serverName">
 
-<!-- <p>{{ serverName }}</p> -->
 <br>
 <button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server
 </button>
 <br>
 <br>
-<!--<p [innerText]="allowNewServer"></p>-->
-<!-- <p>{{ serverCreationStatus }}</p> -->
 
 <p *ngIf="serverCreated">Server was created, server name is {{ serverName }}</p>
 
-<app-server></app-server>
-<app-server></app-server>
+<br>
+<app-server *ngFor="let server of servers"></app-server>
